# minimocas-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh
python/: heatmap-server.py  mini-server.py  simulation-ws.py
src/app/: color_palette.hpp  miniedit.cpp  miniplex.cpp  miniplex_gui.h  miniplex_layout.cpp  miniplex_scene.cpp  minitest.cpp  minitest_gui.h  minitest_layout.cpp  minitest_scene.cpp  route_generator.cpp  sim_engine.cpp  simulation_python_interface.cpp  vici.cpp  vici_gui.h  vici_layout.cpp  vici_scene.cpp  vicistats.cpp
test/config/: bari.json  heatmap.json  production.json  test_canals.json  test_pawns.json  test_polygon_closed.json  test_resume_canals_resume.json  test_resume_canals_start.json  test_resume_resume.json  test_resume_start.json  test_sim_alpha.json  test_transp.json  test_transp_attraction.json  vive.json  vive_resume.json  vivesrv_local.json
test/config/old/: attractions.json  miniedit.json  rework.json
